--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
+  overflow: hidden;
 }
 
 .slideshow-container {
